yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
/* ... */
/** Timer Pickers */
.ui-datepicker .ui-timepicker-div .ui-widget-header {
    padding: 5px 0;
    border-bottom: 1px solid #ccc;
}

.ui-timepicker-div .ui_tpicker_time .ui_tpicker_time_input { 
    background: none !important;
    border-bottom: none !important;
}


/** Open Layers Overrides */
.ol-zoom-in, .ol-zoom-out {
    float: inherit;
}

.sp-replacer {
    &.sp-disabled {
        border: 0;
        padding: 0;
        .sp-preview {
            margin: 0;
        }
        .sp-dd {
            display: none;
        }
    }
}

.button.naked.picker-button {
    height: auto !important;
    .b-label {
        height: auto;
    }
}

input[readonly], input[readonly="readonly"] {
    opacity: .7;
}

.opacityOff {
    opacity: 1 !important;
}

.bordered-div {
    border: 1px solid #ccc;
    padding: 10px;
    overflow-y: auto;
}

.app-button {
    height: auto !important;
    padding: 5px;
    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.link-tr {
    text-align: center;
    padding: 8px;
    cursor: pointer;
}

.bl1 {
    border-left: 1px solid rgba(0, 0, 0, 0.12) !important;
	border-top-left-radius: 4px !important;
	border-bottom-left-radius: 4px !important;
}
/** Text area dynamic width. Overrides cols property */
.tadw {
    width: 100%;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
    box-sizing:border-box;
}

/** Text area width 250px. Overrides cols property */
.taw250 {
    width: 250px;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
    box-sizing:border-box;
}
/** Center vertically when vertical-align: middle isn't an option. This requires position: relative;
    on the parent element. see https://www.w3schools.com/css/css_align.asp */
.cv {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);
}

.ui-jqgrid .ui-jqgrid-htable .ui-th-div {
    margin-bottom: 7px;
    height: 20px !important;
}

span.error {
    float: left;
}

div.ui-widget-content {
    margin-left: -24px;
    margin-right: -24px;
    padding: 20px 5px 5px 10px !important;
    border-top: 1px solid #ccc;
}

div.action-area {
    margin-left: -6px;
    margin-right: 2px;
    padding: 4px 3px 4px 3px !important;
}

